<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context="br.com.passalixo.projetoandroid.passalixo.HomeActivity"
    tools:ignore="GradleDependency">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="388dp"
        android:layout_height="42dp"
        android:background="@color/bg_fundo"
        android:paddingBottom="6dp"
        android:paddingTop="8dp"
        android:text="@string/noticias"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="386dp"
        android:layout_height="227dp"
        android:background="@drawable/campanha"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="44dp"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="388dp"
        android:layout_height="42dp"
        android:background="@color/bg_fundo"
        android:paddingBottom="6dp"
        android:paddingTop="8dp"
        android:text="@string/servico"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="273dp" />

    <EditText
        android:id="@+id/end_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fundo_caixa"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/endereco"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="335dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/solicitar_bt"
        android:layout_width="90dp"
        android:layout_height="34dp"
        android:background="@drawable/button"
        android:text="@string/botao_enviar"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="423dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/info_id"
        android:layout_width="214dp"
        android:layout_height="46dp"
        android:background="@drawable/fundo_caixa"
        android:text="@string/caixa_texto"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="365dp"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>
